# Quant-Core

./: AGENTS.md  account_manager.py  config_loader.py  config_models.py  data_fetcher.py  main.py  order_executor.py  pyproject.toml  requirements.lock.txt  requirements.txt  risk_manager.py  strategy.py  strategy_engine.py
backtest/: account.py  engine.py  exchange.py  historical_data.py
configs/: .placeholder  strategies.yaml
data/historical/: .placeholder  BTCUSDT-1m.csv
src/cqt/: __init__.py
src/cqt/analysis/: market_regime.py
src/cqt/core/: event.py
src/cqt/utils/: logging.py
strategies/: all_streams_demo_strategy.py  simple_sma_strategy.py
